src/Footer.css
footer {
  display: block;
  margin: auto;
  width: 100%;
  height: 40px;
  position: absolute;
  bottom: 5%;
}

.footer-title {
  text-align: center;
  color: grey;
  letter-spacing: 0.5px;
  line-height: 150%;
}
@media (max-width: 1025px) and (max-height: 770px) {
  footer {
    height: 30px;
  }
  .footer-title {
    line-height: 120%;
    font-size: 12px;
  }
}

@media (max-width: 545px) {
  footer {
    height: 0px;
  }

}
@media (max-width: 435px) {
  footer {
      bottom: 10%;
  }
}
@media (max-width: 415px) {
  footer {
      bottom: 14%;
  }
}
@media (max-width: 400px) {
  footer {
    bottom: 0%;
  }
}
@media (max-width: 395px) {
  footer {
      bottom: 10%;
  }
}
@media (max-width: 376px) {
  footer {
      bottom: 00%;
  }
}
@media (max-width: 345px) {
  footer {
    bottom:8%;
  }
}

